--- a/Project4.css
+++ b/Project4.css
@@ -21,10 +21,25 @@ section {
 	background-image: url("images/BackgroundBanner.jpg");
 }
 
+.Thai-banner{
+	display: block;
+    height: 100%;
+    width: 100%;
+    box-sizing:border-box;
+	vertical-align: middle;
+	background-image: url("images/Thailand/BG-Thailand.jpg");
+}
+
 section div{
 	width: 100%;
 	position: absolute;
 	top: 45%;
+}
+
+#banner-text{
+	display: block;
+	margin-left: 10px;
+	margin-right: 10px;
 }
 
 #banner-text h1{
@@ -38,7 +53,7 @@ section div{
 	font-size: 1.5em;
 }
 
-.video-background-banner{
+.background-banner{
 	/* Full height */
   	height: 100%; 
 
@@ -65,6 +80,10 @@ section div{
 }
 
 
+#flickr-img{
+	width: 100%;
+}
+
 /* For mobile phones: */
  [class*="col-"] {
   width: 100%;
@@ -74,9 +93,10 @@ section div{
 	section div{
 		top: 22%;
 	}
-  #banner-text h1{
-    font-size: 40px;
+  	#banner-text h1{
+    	font-size: 40px;
   }
+
 }
 @media screen and (min-width: 768px){
 	section div{
@@ -85,6 +105,7 @@ section div{
   #banner-text h1{
     font-size: 2.4rem;
   }
+
 }
 @media screen and (min-width: 992px){
 	section div{
@@ -93,4 +114,5 @@ section div{
   #banner-text h1{
     font-size: 3.5rem;
   }
+
 }
