--- a/Project4.css
+++ b/Project4.css
@@ -18,7 +18,7 @@ section {
     width: 100%;
     box-sizing:border-box;
 	vertical-align: middle;
-	background-image: url("images/BackgroundBanner.jpg");
+	background-image: url("images/BackgroundBanner.gif");
 }
 
 .Thai-banner{
