--- a/Project4.css
+++ b/Project4.css
@@ -29,7 +29,6 @@ section {
 	vertical-align: middle;
 	background-image: url("images/Thailand/BG-Thailand.jpg");
 }
-
 .India-banner{
 	display: block;
     height: 100%;
@@ -37,6 +36,14 @@ section {
     box-sizing:border-box;
 	vertical-align: middle;
 	background-image: url("images/India/BG-India.jpg");
+}
+.Vietnam-banner{
+	display: block;
+    height: 100%;
+    width: 100%;
+    box-sizing:border-box;
+	vertical-align: middle;
+	background-image: url("images/Vietnam/BG-Vietnam.jpg");
 }
 
 section div{
