--- a/Project4.css
+++ b/Project4.css
@@ -45,6 +45,14 @@ section {
 	vertical-align: middle;
 	background-image: url("images/Vietnam/BG-Vietnam.jpg");
 }
+.Myanmar-banner{
+	display: block;
+    height: 100%;
+    width: 100%;
+    box-sizing:border-box;
+	vertical-align: middle;
+	background-image: url("images/Myanmar/BG-Myanmar.jpg");
+}
 
 section div{
 	width: 100%;
