--- a/Project4.css
+++ b/Project4.css
@@ -1,6 +1,26 @@
 @charset "utf-8";
 /* CSS Document */
 * { box-sizing: border-box; }
+/* Scrollbar*/
+/* width */
+::-webkit-scrollbar {
+  width: 15px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 15px grey; 
+  border-radius: 15px;
+} 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: darkgray; 
+  border-radius: 15px;
+}
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: black; 
+}
+
 html{
 	scroll-behavior: smooth;
 }
