--- a/Project4.css
+++ b/Project4.css
@@ -73,6 +73,14 @@ section {
 	vertical-align: middle;
 	background-image: url("images/Myanmar/BG-Myanmar.jpg");
 }
+.News-banner{
+	display: block;
+    height: 100%;
+    width: 100%;
+    box-sizing:border-box;
+	vertical-align: middle;
+	background-image: url("images/News/BG-News.JPG");
+}
 
 section div{
 	width: 100%;
